allow obtaining SGVariantCounts from BAM files; changed default BPPARAM to SerialParam()
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SGSeq@101994 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/vignettes/SGSeq.Rnw
+++ b/vignettes/SGSeq.Rnw
@@ -234,7 +234,7 @@ sgf <- convertToSGFeatures(txf)
 sgf <- annotate(sgf, txf_annotated)
 sgfc <- getSGFeatureCounts(si, sgf)
 sgv <- findSGVariants(sgf)
-sgvc <- getSGVariantCounts(sgfc, sgv)
+sgvc <- getSGVariantCounts(sgv, sgfc)
 @ 
 
 \sloppy Feature prediction and counting (with \Rfunction{predictTxFeatures} 
