updated documentation and vignette
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SGSeq@102500 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,8 @@ CHANGES IN VERSION 1.2.0
 
     o Renamed class TxVariants to SGVariants
 
+    o Renamed class TxVariantCounts to SGVariantCounts
+
     o Renamed findTxVariants() to findSGVariants()
 
     o Renamed getTxVariantCounts() to getSGVariantCounts()
